<resources>

    <string name="app_name">HomeBot</string>
    <string name="warning">You must enable HomeBot as your assist app for it to work</string>
    <string name="error_no_assistant">This device doesn\'t support HomeBot</string>
    <string name="error_brightness">Cannot access system brightness settings</string>

    <string name="pref_header">Choose what will happen when you press and hold the home button</string>
    <string name="pref_title_app">Launch app</string>
    <string name="pref_title_shortcut">Launch shortcut</string>
    <string name="pref_title_web">Open web page</string>
    <string name="pref_title_flashlight">Toggle flashlight</string>
    <string name="pref_title_prev_app">Open previous app</string>
    <string name="pref_title_recents">Open recent apps screen</string>
    <string name="pref_title_lock">Lock phone</string>
    <string name="pref_title_brightness">Toggle brightness</string>
    <string name="pref_title_file">Open a file</string>
    <string name="pref_title_folder">Folder</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>

    <string name="choose_app">Choose an app</string>
    <string name="choose_activity">Choose an activity</string>
    <string name="choose_shortcut">Choose a shortcut</string>
    <string name="other_activities">Other activities</string>
    <string name="default_activity">Default app activity</string>
    <string name="enter_url">Enter a web URL</string>

    <string name="web_hint">www.duck.com</string>
    <string name="no_items">No available items</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="flashlight_on">Flashlight is active</string>

    <string name="actions_setting_key">actions_preference</string>
    <string name="actions_setting_title">Quick actions:</string>

    <string name="backup_settings_header">Backup &amp; Recover</string>

    <string name="export_settings_preference_key">export_settings_key</string>
    <string name="export_settings_preference_title">Export settings</string>
    <string name="export_settings_preference_summary">Export all your settings for backup</string>

    <string name="import_settings_preference_key">import_settings_key</string>
    <string name="import_settings_preference_title">Import settings</string>
    <string name="import_settings_preference_summary">Import settings for a previous backup</string>

    <string name="add_action_preference_key">add_action_key</string>
    <string name="add_action_preference_title">Add quick action</string>
    <string name="action_icon_content_description">Quick action icon</string>
    <string name="reorder_action_icon_description">reorder action icon</string>

    <string name="deleted_quick_action_message">Action removed</string>
    <string name="undo_delete_action_button_text">Undo</string>

    <string name="add_action_dialog_title">Choose the type of the new action</string>
    <string name="close_add_action_dialog_button_text">Back</string>
    <string name="export_backup_intent_title">Save settings backup</string>

    <string name="export_settings_error_message">An error occurred while exporting your settings</string>
    <string name="empty_actions_list_text">No action configured</string>

</resources>
